# negs-ugv_dataset

./: README.md  README_dataset.md  readme.txt
husky_sim/: LICENSE
husky_sim/husky_control/launch/: control.launch
husky_sim/husky_description/meshes/: ZED.stl
husky_sim/husky_description/urdf/: OS1-64.urdf.xacro  gps.urdf.xacro  husky.urdf.xacro  sensor_description.urdf  stereo_camera.urdf  stereo_camera.urdf.xacro  vlp.urdf
husky_sim/husky_tachometers/: CMakeLists.txt  package.xml
husky_sim/husky_tachometers/msg/: Encoder.msg
husky_sim/husky_tachometers/src/: encoderPlugin.cpp
natural_enviroment/: CMakeLists.txt  package.xml
natural_enviroment/launch/: add_husky.launch  add_husky_forest_1.launch  add_husky_forest_2.launch  add_husky_hill_1.launch  add_husky_hill_2.launch  add_husky_lake_2.launch  add_husky_park_2.launch  create_forest.launch  create_forest_tagged.launch  create_hill.launch  create_hill_tagged.launch  create_lake.launch  create_lake_tagged.launch  create_park.launch  create_park_tagged.launch  simulator_empty_world.launch  spawn_camera_park_1.launch
natural_enviroment/scripts/: extract_bag.py  fixer_husky.py  get_real_cam.py  get_tag_cam.py  obj_send_forest_1.py  obj_send_forest_2.py  obj_send_hill_1.py  obj_send_hill_2.py  obj_send_lake_1.py  obj_send_lake_2.py  obj_send_park_1.py  obj_send_park_2.py  rosbagrecord.txt  sample_bag.py
natural_enviroment/stereo_camera/: model.config  model.sdf
natural_enviroment/worlds/: forest.world  forest_tagged.world  hill.world  hill_tagged.world  lake.world  lake_tagged.world  park.world  park_tagged.world
ouster_example/: .gitignore  .travis.yml  Dockerfile  README.md  install-docker.sh  run-docker.sh
ouster_example/cartographer_ros/configuration_files/: assets_writer_cart_2d.lua  assets_writer_cart_3d.lua  cart_2d.lua  cart_3d.lua
ouster_example/cartographer_ros/launch/: assets_writer_cart_2d.launch  assets_writer_cart_3d.launch  cart_2d.launch  cart_3d.launch  demo_cart_2d.launch  demo_cart_3d.launch  offline_cart_2d.launch  offline_cart_3d.launch
ouster_example/cartographer_ros/urdf/: os1_sensor.urdf
ouster_example/ouster_ros/: CMakeLists.txt  package.xml
ouster_example/ouster_ros/src/: os1_cloud_node.cpp
ouster_example/ouster_ros/tests/: os1_replay.test
ouster_example/scripts/: install_ouster_example_fork.bash
