<?xml version="1.0"?>
<package>
  <name>natural_environments</name>
  <version>0.1.0</version>
  <description>Natural Environments Simulator bringup</description>

  <maintainer email="manuel.sanchez.m@uma.es"> Manuel Sánchez Montero </maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>

